--- a/src/sass/config/wrapper.scss
+++ b/src/sass/config/wrapper.scss
@@ -5,6 +5,7 @@
    &--padding{
       @include responsive-max($width-container){
          padding: 0 $space-default;
+         box-sizing: border-box;
       }
    }
 }
