--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'setup/font-face';
 @import 'setup/sizes';
 @import 'setup/colors';
+@import 'setup/grid';
 
 //CONFIG
 @import 'config/paths';
