--- a/src/sass/config/paths.scss
+++ b/src/sass/config/paths.scss
@@ -1,3 +1,3 @@
-$p_img:   './public/images/';
-$p_icon:  './public/svg/non-optimized/';
-$p_video: './public/videos/';
+$p_img:   './../images/';
+$p_icon:  './../svg/non-optimized/';
+$p_video: './../videos/';
