--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,18 +1,19 @@
-
+//SETUP
 @import 'setup/fonts';
 @import 'setup/font-face';
 @import 'setup/sizes';
 @import 'setup/colors';
 @import 'setup/grid';
 
-
+//CONFIG
 @import 'config/paths';
 @import 'config/responsive';
 @import 'config/wrapper';
 @import 'config/global';
 
-
+//COMPONENTS
 @import 'components/button';
 @import 'components/list';
 @import 'components/title';
 @import 'components/map';
+@import 'components/graph';
