--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,5 +15,7 @@
 @import 'components/button';
 @import 'components/list';
 @import 'components/title';
+@import 'components/header';
+@import 'components/section';
 @import 'components/map';
-@import 'components/graph';
+@import 'components/head-pourcent';
