--- a/src/sass/setup/colors.scss
+++ b/src/sass/setup/colors.scss
@@ -1,2 +1,10 @@
 $c-action: #000000;
 $c-main: #000000;
+
+$c-grey-light: #E9E9E9;
+
+$c-electric: #BBFFCA;
+$c-hybride: #B8FFFB;
+$c-essence: #FFD66C;
+$c-diesel: #EDE4C2;
+$c-gaz: #FDCFCF;
