--- a/src/sass/setup/fonts.scss
+++ b/src/sass/setup/fonts.scss
@@ -1,6 +1,5 @@
-$f-main: 'Montserrat';
-$f-secondary: 'Raleway';
-$f-number: 'Rubik';
+$f-main: 'Raleway';
+$f-secondary: 'Rubik';
 
 @mixin font-family($font){
    font-family: $font, sans-serif;
