--- a/src/sass/setup/grid.scss
+++ b/src/sass/setup/grid.scss
@@ -7,11 +7,47 @@
 .grid{
     @include grid();
 
-    &__1-12{
+    //1 - ...
+    &__c-1-12{
         grid-column: 1 / -1;
     }
 
-    &__1-8{
+    &__c-1-8{
         grid-column: 1 / 9;
+    }
+
+    //2 - ...
+    &__c-2-9{
+        grid-column: 2 / 9;
+    }
+
+    //3 - ...
+    &__c-3-8{
+        grid-column: 3 / 8;
+    }
+
+    &__c-3-9{
+        grid-column: 3 / 9;
+    }
+
+    &__c-3-11{
+        grid-column: 3 / 11;
+    }
+
+    //4 - ..
+    &__c-4-9{
+        grid-column: 4 / 9;
+    }
+
+    //7 - ..
+    &__c-6-12{
+        grid-column: 6 / 12;
+    }
+
+
+
+    // ––––––––––––––––– ROWS –––––––––––––––––
+    &__r-2-4{
+        grid-row: 2 / 4;
     }
 }
