--- a/src/sass/components/title.scss
+++ b/src/sass/components/title.scss
@@ -1,6 +1,20 @@
 .title{
     font-size: 6.1rem;
-    font-weight: 700;
-    @include font-family($f-secondary);
-    margin-bottom: $space-default;
+    line-height: 1.3;
+    font-weight: 900;
+    letter-spacing: 2px;
+    @include font-family($f-main);
+
+    &__light{
+        font-weight: 300;
+    }
+
+    &--small{
+        font-size: 2.7rem;
+        font-weight: 300;
+    }
+
+    &--medium{
+        font-size: 4.1rem;
+    }
 }
